Обновил до новой версии .NET (3.1)

--- a/MyAppChecker/appsettings.json
+++ b/MyAppChecker/appsettings.json
@@ -2,7 +2,7 @@
   "WorkersCount": 2,
   "RunInterval": 10,
   "MaxAppIDsCount": 500,
-  "Proxy": "Сюда прокси ip", 
+  "Proxy": "", 
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
