--- a/MyAppChecker/MyAppChecker.csproj
+++ b/MyAppChecker/MyAppChecker.csproj
@@ -1,14 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp2.2</TargetFramework>
+        <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
-        <PackageReference Include="Microsoft.Extensions.Http" Version="2.2.0" />
-        <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="2.2.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.1" />
+        <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.1" />
+        <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="3.1.1" />
+        <PackageReference Include="Microsoft.NETCore.App" Version="2.2.8" />
         <PackageReference Include="Polly.Contrib.MutableBulkheadPolicy" Version="1.0.0" />
         <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
 
